--- a/components/MintButton.module.css
+++ b/components/MintButton.module.css
@@ -2,6 +2,10 @@
   flex-shrink: 0;
 }
 
+.wrapper .button {
+  width: 100%;
+}
+
 .button {
   padding: 0.75rem 1.5rem;
   border: none;
